[gd_scene load_steps=3 format=3 uid="uid://bvvixi5hweapv"]

[ext_resource type="Texture2D" uid="uid://1si3tkm8qa3e" path="res://assets/sprites/mugre.png" id="1_gc6pq"]
[ext_resource type="Script" uid="uid://d01m31synwu6u" path="res://scripts/mugres.gd" id="1_vt0k4"]

[node name="mugres" type="RigidBody2D"]
collision_layer = 2
collision_mask = 2
mass = 0.158
gravity_scale = 0.0
linear_damp = 5.755
angular_damp = 4.72
script = ExtResource("1_vt0k4")

[node name="mugre_1" type="Sprite2D" parent="."]
position = Vector2(0, 0.25)
scale = Vector2(1, 0.944444)
texture = ExtResource("1_gc6pq")
region_enabled = true
region_rect = Rect2(1.99038, 1.34524, 9.1576, 9.716)

[node name="collmugre_1" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-2, -1, 2, -1, 2, 0, 0, 1, -2, 0)

[node name="mugre_2" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 0.25)
scale = Vector2(1, 0.944444)
texture = ExtResource("1_gc6pq")
region_enabled = true
region_rect = Rect2(16.3341, 3.09077, 5.99924, 5.90694)

[node name="collmugre_2" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-1, -1, 2, -1, 2, 0, -1, 1, -1, 0)

[node name="mugre_3" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 0.25)
scale = Vector2(1, 0.944444)
texture = ExtResource("1_gc6pq")
region_enabled = true
region_rect = Rect2(27.774, 3.3812, 5.21507, 3.95429)

[node name="collmugre_3" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-1, 0, 1, 0, 1, 1, -1, 1, -1, 0)

[node name="mugre_4" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 0.25)
scale = Vector2(1, 0.944444)
texture = ExtResource("1_gc6pq")
region_enabled = true
region_rect = Rect2(40.2507, 4.32076, 3.4101, 3.55218)

[node name="collmugre_4" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-1, -1, 1, -1, 1, 1, -1, 1, -1, 0)

[node name="mugre_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 0.25)
scale = Vector2(0.77, 0.727)
texture = ExtResource("1_gc6pq")
region_enabled = true
region_rect = Rect2(52.0681, 3.02172, 3.64691, 5.26197)

[node name="collmugre_5" type="CollisionPolygon2D" parent="."]
visible = false
scale = Vector2(0.91, 0.91)
polygon = PackedVector2Array(-1, -1, 0, -1, 0, 0, 1, 0, 1, 1, -1, 1)

[node name="mugre_6" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.77, 0.727)
texture = ExtResource("1_gc6pq")
region_enabled = true
region_rect = Rect2(63.2711, 2.74702, 4.73625, 5.54141)

[node name="collmugre_6" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-1, -1, 0, -1, 1, -1, 1, 0, 1, 1, 0, 0)
